# well-dash

./: LICENSE  README.md  app.py  encoder.joblib  plotly-cloud.toml  pyproject.toml  recommendations.md  requirements.txt  run.py
models/: basin_encoder.joblib
training/: precompute_predictions.py  utils.py
wellapp/: __init__.py  callbacks.py  config.py  data_manager.py  layout.py  plotters.py  predictors.py  utils.py  validators.py
